--- a/.drone.yml
+++ b/.drone.yml
@@ -2,6 +2,10 @@ kind: pipeline
 type: docker
 name: default
 
+workspace:
+  base: /go
+  path: src/github.com/thecodeisgreen/test_ci
+  
 steps:
 - name: dep
   image: golang
