--- a/.drone.yml
+++ b/.drone.yml
@@ -22,8 +22,10 @@ steps:
 - name: build-image
   image: plugins/docker
   settings:
-    username: hbettan
-    password: laviedeChateau16
+    username:
+      from_secret: DOCKER_USERNAME
+    password: 
+      from_secret: DOCKER_PASSWORD
     repo: thecodeisgreen/test_ci
     tags: latest
 
