--- a/.drone.yml
+++ b/.drone.yml
@@ -20,6 +20,8 @@ steps:
   commands:
     - go build
     - go test ./...
+  env:
+    GOPATH: /go/src/github.com/thecodeisgreen/test_ci
 
 - name: build-image
   image: plugins/docker
