--- a/.drone.yml
+++ b/.drone.yml
@@ -1,9 +1,9 @@
 kind: pipeline
 name: default
 
-#workspace:
-#  base: /go
-#  path: src/github.com/thecodeisgreen/test_ci
+workspace:
+  base: /go
+  path: src/github.com/thecodeisgreen/test_ci
 
 clone:
   depth: 50
@@ -21,7 +21,7 @@ steps:
   - go build
   - go test ./...
   environment:
-    GOPATH: /go/src/github.com/thecodeisgreen/test_ci
+    GOPATH: /go
 
 - name: build-image
   image: plugins/docker
