--- a/.drone.yml
+++ b/.drone.yml
@@ -11,13 +11,14 @@ steps:
 - name: dep
   image: golang
   commands:
+  - env | grep "GOPATH"
   - go get github.com/golang/dep/...
   - dep ensure
 
 - name: backend
   image: golang
   commands:
-  - env
+  - env | grep "GOPATH"
   - pwd
   - ls -ail
   - go build
