--- a/.drone.yml
+++ b/.drone.yml
@@ -32,7 +32,7 @@ steps:
     password: 
       from_secret: DOCKER_PASSWORD
     repo: thecodeisgreen/test_ci
-    tags: latest
+    tags: ${DRONE_BRANCH}
 
 trigger:
   branch:
