--- a/.drone.yml
+++ b/.drone.yml
@@ -38,6 +38,7 @@ steps:
     password: 
       from_secret: DOCKER_PASSWORD
     repo: thecodeisgreen/test_ci
+    tags: ${DRONE_BRANCH}
   when:
     branch:
       exclude :
